# demo-package

./: Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: cd.yml
demo_package/: __about__.py  __init__.py  main.py
demo_target/: __about__.py  __init__.py
